Yamlt/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
  name: ingresshttp
spec:
  rules:
  - http:
      paths:
        - path: /wordpress/
          backend:
            serviceName: wordpress
            servicePort: 5050
        - path: /
          backend:
            serviceName: nginx
            servicePort: 80
        - path: /phpmyadmin/
          backend:
            serviceName: phpmyadmin
            servicePort: 5000
