Yamlt/ingress443.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: ingresshttps
spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: nginx
            servicePort: 443
